# vk_pygeom

./: README.md  pyproject.toml  setup.py
src/vk2gpz/geom/: manifold.py  vertex.py
src/vk2gpz/geom/grid/: geodesicdome.py  plane.py
src/vk2gpz/geom/projection/: projection.py  wagner.py
tests/vk2gpz/geom/grid/: test_geodesicdome.py  test_geodesicdome_off.py  test_plane_off.py
tests/vk2gpz/geom/projection/: test_projection.py  test_projection_2.py
vk2gpz/geom/: __init__.py  util.py
vk2gpz/geom/grid/: __init__.py
vk2gpz/geom/grid/test/: plane.off  test_geodesicdome.py  test_geodesicdome_off.py
vk2gpz/geom/projection/: equal_earth.py  kavrayskiy.py  projection.py  wagner.py
vk2gpz/geom/projection/test/: test_projection_2.py
