requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vk2gpz-geom"
version = "1.0.10"
authors = [
    { name = "vk2gpz", email = "vk2gpz@gmail.com" },
]
description = "This is a collection of geometry related python packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vk2gpz/vk_pygeom"
Issues = "https://github.com/vk2gpz/vk_pygeom/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "vk2gpz",
    "vk2gpz.geom",
    "vk2gpz.geom.grid",
    "vk2gpz.geom.projection",
]
